--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4105</span>
+<span>v2.5.0 │ ★ 4120</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 769</span>
+<span>v2.6.0 │ ★ 770</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -474,6 +474,12 @@ hr:before {
 <code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
 <p>&#39;go mod graph&#39; as a nicely indented graph.</p>
 <span>v1.0.0 │ ★ 5</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
+<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
+<p>Aggregate statistics for git repos.</p>
+<span>  ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/border">border</a></h3>
@@ -515,12 +521,6 @@ hr:before {
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
 <code><a href="https://godocs.io/zgo.at/kommentaar">godoc</a></code>
 <p>Generate documentation for Go APIs.</p>
-<span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
-<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
-<p>Aggregate statistics for git repos.</p>
 <span>  ★ 0</span>
 </div>
 </section>
@@ -662,6 +662,12 @@ hr:before {
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
 <code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
 <p>A terminfo library.</p>
+<span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/slog_align">zgo.at/slog_align</a></h3>
+<code><a href="https://godocs.io/zgo.at/slog_align">godoc</a></code>
+<p>Less &#34;wall of text&#34;-y slog handler.</p>
 <span>  ★ 0</span>
 </div>
 <div>
