--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4120</span>
+<span>v2.5.0 │ ★ 4154</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 770</span>
+<span>v2.6.0 │ ★ 771</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -458,28 +458,22 @@ hr:before {
 <span>v1.0.0 │ ★ 26</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
+<code><a href="https://godocs.io/zgo.at/colorcount">godoc</a></code>
+<p>Display the colours used in a PNG image.</p>
+<span>  ★ 7</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/goimport">goimport</a></h3>
 <code><a href="https://godocs.io/zgo.at/goimport">godoc</a></code>
 <p>Add, remove, or replace imports in Go files.</p>
 <span>v1.0.2 │ ★ 6</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
-<code><a href="https://godocs.io/zgo.at/colorcount">godoc</a></code>
-<p>Display the colours used in a PNG image.</p>
-<span>  ★ 6</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
 <code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
 <p>&#39;go mod graph&#39; as a nicely indented graph.</p>
 <span>v1.0.0 │ ★ 5</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
-<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
-<p>Aggregate statistics for git repos.</p>
-<span>  ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/border">border</a></h3>
@@ -491,6 +485,12 @@ hr:before {
 <h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
 <code><a href="https://godocs.io/zgo.at/sqlbench">godoc</a></code>
 <p>Run benchmarks on an SQL database.</p>
+<span>  ★ 3</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
+<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
+<p>Aggregate statistics for git repos.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -518,6 +518,12 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/wtff">wtff</a></h3>
+<code><a href="https://godocs.io/zgo.at/wtff">godoc</a></code>
+<p>Frontend for some ffmpeg operations.</p>
+<span>  ★ 0</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
 <code><a href="https://godocs.io/zgo.at/kommentaar">godoc</a></code>
 <p>Generate documentation for Go APIs.</p>
@@ -530,7 +536,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
 <code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v1.2.0 │ ★ 57</span>
+<span>v1.2.0 │ ★ 58</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
@@ -575,16 +581,16 @@ hr:before {
 <span>  ★ 9</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
+<code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
+<p>Send emails with a friendly API.</p>
+<span>  ★ 8</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
 <code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
 <p>Get the browser and OS from the User-Agent header.</p>
 <span>v1.0.0 │ ★ 7</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
-<code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
-<p>Send emails with a friendly API.</p>
-<span>  ★ 7</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
@@ -608,6 +614,12 @@ hr:before {
 <h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
 <code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
 <p>Go timezone convience library.</p>
+<span>  ★ 3</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/slog_align">zgo.at/slog_align</a></h3>
+<code><a href="https://godocs.io/zgo.at/slog_align">godoc</a></code>
+<p>Less &#34;wall of text&#34;-y slog handler.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -662,12 +674,6 @@ hr:before {
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
 <code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
 <p>A terminfo library.</p>
-<span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/slog_align">zgo.at/slog_align</a></h3>
-<code><a href="https://godocs.io/zgo.at/slog_align">godoc</a></code>
-<p>Less &#34;wall of text&#34;-y slog handler.</p>
 <span>  ★ 0</span>
 </div>
 <div>
