--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4154</span>
+<span>v2.5.0 │ ★ 4160</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
@@ -482,6 +482,12 @@ hr:before {
 <span>  ★ 4</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/wtff">wtff</a></h3>
+<code><a href="https://godocs.io/zgo.at/wtff">godoc</a></code>
+<p>Frontend for some ffmpeg operations.</p>
+<span>  ★ 3</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
 <code><a href="https://godocs.io/zgo.at/sqlbench">godoc</a></code>
 <p>Run benchmarks on an SQL database.</p>
@@ -518,15 +524,15 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/wtff">wtff</a></h3>
-<code><a href="https://godocs.io/zgo.at/wtff">godoc</a></code>
-<p>Frontend for some ffmpeg operations.</p>
-<span>  ★ 0</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
 <code><a href="https://godocs.io/zgo.at/kommentaar">godoc</a></code>
 <p>Generate documentation for Go APIs.</p>
+<span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
 <span>  ★ 0</span>
 </div>
 </section>
@@ -542,7 +548,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
-<span>  ★ 37</span>
+<span>  ★ 38</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
@@ -668,7 +674,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
 <code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
 <p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>v1.2.0 │ ★ 0</span>
+<span>v1.3.0 │ ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
