--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@ hr:before {
 		section      { display: flex; flex-wrap: wrap; justify-content: space-around; }
 		section h2   { width: 100%; }
 		section div  { position: relative; display: flex; flex-wrap: wrap; align-content: flex-start;
-		               width: 18.5rem; min-height: 2rem; margin-bottom: 1em; padding: .4em .8em;
-		               border: 1px solid #d1d5da; border-radius: 3px;
-		               padding-bottom: 2em; }
+		               width: 18.5rem; min-height: 2rem; margin-bottom: 1em; padding: .4em .4em 2em .8em;
+		               border: 1px solid #d1d5da; border-radius: 3px; }
 		section span { position: absolute; bottom: 0; width: 100%; padding: 0 .8em;
 		               margin-left: -.8em; margin-right: 0; text-align: right; background-color: #eee; }
 		@media (max-width: 60em) { section div { width: 45%;  } }
@@ -373,7 +372,7 @@ hr:before {
 </div>
 <div>
 <h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
 <p>Format json, nicely.</p>
 <span>  ★ 0</span>
 </div>
@@ -382,9 +381,9 @@ hr:before {
 <h2 id="libraries">Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v1.2.0 │ ★ 58</span>
+<span>v2.1.0 │ ★ 58</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
@@ -516,7 +515,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
 <code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
 <p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>v1.3.0 │ ★ 0</span>
+<span>v1.4.0 │ ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
@@ -528,6 +527,12 @@ hr:before {
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
 <code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
 <p>List system processes.</p>
+<span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
 <span>  ★ 0</span>
 </div>
 <div>
