--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4160</span>
+<span>v2.5.0 │ ★ 4168</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
@@ -347,6 +347,12 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
 <code><a href="https://godocs.io/zgo.at/gosodoff">godoc</a></code>
 <p>Generate return statements in Go code.</p>
@@ -370,12 +376,6 @@ hr:before {
 <p>Generate documentation for Go APIs.</p>
 <span>  ★ 0</span>
 </div>
-<div>
-<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
-<p>Format json, nicely.</p>
-<span>  ★ 0</span>
-</div>
 </section>
 <section class="page">
 <h2 id="libraries">Libraries</h2>
@@ -383,7 +383,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
 <code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.1.0 │ ★ 58</span>
+<span>v2.1.0 │ ★ 59</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
@@ -398,16 +398,16 @@ hr:before {
 <span>v1.0.0 │ ★ 19</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
+<code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
+<p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
+<span>  ★ 18</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
 <code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
 <p>A simple and functional configuration file parser.</p>
 <span>v1.2.2 │ ★ 17</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
-<code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
-<p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
-<span>  ★ 17</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
@@ -488,6 +488,12 @@ hr:before {
 <span>  ★ 2</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/hubhub">zgo.at/hubhub</a></h3>
 <code><a href="https://godocs.io/zgo.at/hubhub">godoc</a></code>
 <p>Set of utility functions for working with the GitHub API.</p>
@@ -524,15 +530,15 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
+<h3><a href="https://github.com/golang/term">zgo.at/term</a></h3>
+<code><a href="https://godocs.io/zgo.at/term">godoc</a></code>
+<p>.</p>
+<span>  ★ </span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
 <code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
 <p>List system processes.</p>
-<span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
-<p>Format json, nicely.</p>
 <span>  ★ 0</span>
 </div>
 <div>
