--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4168</span>
+<span>v2.5.0 │ ★ 4209</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 771</span>
+<span>v2.6.0 │ ★ 773</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -383,13 +383,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
 <code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
 <p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.1.0 │ ★ 59</span>
+<span>v2.1.0 │ ★ 60</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
-<span>  ★ 38</span>
+<span>  ★ 39</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
@@ -428,27 +428,27 @@ hr:before {
 <span>  ★ 9</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
+<code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
+<p>Get the browser and OS from the User-Agent header.</p>
+<span>v1.0.0 │ ★ 8</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
 <code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
 <p>Send emails with a friendly API.</p>
 <span>  ★ 8</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
-<code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
-<p>Get the browser and OS from the User-Agent header.</p>
-<span>v1.0.0 │ ★ 7</span>
+<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
+<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
+<p>Extensions to Go&#39;s stdlib.</p>
+<span>  ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
 <code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
 <p>Static validation for Go that returns parsed values.</p>
-<span>  ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
-<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
-<p>Extensions to Go&#39;s stdlib.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -530,10 +530,10 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
-<h3><a href="https://github.com/golang/term">zgo.at/term</a></h3>
+<h3><a href="https://github.com/arp242/term">zgo.at/term</a></h3>
 <code><a href="https://godocs.io/zgo.at/term">godoc</a></code>
-<p>.</p>
-<span>  ★ </span>
+<p> Go terminal and console support.</p>
+<span>  ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
