--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4209</span>
+<span>v2.5.0 │ ★ 4214</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 773</span>
+<span>v2.6.0 │ ★ 774</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -533,6 +533,12 @@ hr:before {
 <h3><a href="https://github.com/arp242/term">zgo.at/term</a></h3>
 <code><a href="https://godocs.io/zgo.at/term">godoc</a></code>
 <p> Go terminal and console support.</p>
+<span>  ★ 0</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/runewidth">zgo.at/runewidth</a></h3>
+<code><a href="https://godocs.io/zgo.at/runewidth">godoc</a></code>
+<p>Wcwidth.</p>
 <span>  ★ 0</span>
 </div>
 <div>
