--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4214</span>
+<span>v2.5.0 │ ★ 4244</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.6.0 │ ★ 774</span>
+<span>v2.7.0 │ ★ 776</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
@@ -376,20 +376,26 @@ hr:before {
 <p>Generate documentation for Go APIs.</p>
 <span>  ★ 0</span>
 </div>
+<div>
+<h3><a href="https://github.com/arp242/elles">elles</a></h3>
+<code><a href="https://godocs.io/zgo.at/elles">godoc</a></code>
+<p>.</p>
+<span>  ★ </span>
+</div>
 </section>
 <section class="page">
 <h2 id="libraries">Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
 <code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
-<p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.1.0 │ ★ 60</span>
+<p>In-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
+<span>v2.1.0 │ ★ 62</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
-<p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
-<span>  ★ 39</span>
+<p>Go library for writing CLI programs. Includes flag parsing, colours, testing, and various helpful utility functions.</p>
+<span>  ★ 40</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
@@ -401,18 +407,18 @@ hr:before {
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
 <code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
 <p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
-<span>  ★ 18</span>
+<span>  ★ 19</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
 <code><a href="https://godocs.io/zgo.at/sconfig">godoc</a></code>
-<p>A simple and functional configuration file parser.</p>
+<p>Simple and functional configuration file parser.</p>
 <span>v1.2.2 │ ★ 17</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
-<p>Zdb provides a nice API to interact with SQL databases.</p>
+<p>Interact with SQL databases.</p>
 <span>  ★ 11</span>
 </div>
 <div>
@@ -431,7 +437,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
 <code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
 <p>Get the browser and OS from the User-Agent header.</p>
-<span>v1.0.0 │ ★ 8</span>
+<span>v1.0.0 │ ★ 9</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
@@ -443,7 +449,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
 <code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
 <p>Extensions to Go&#39;s stdlib.</p>
-<span>  ★ 4</span>
+<span>  ★ 5</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
@@ -473,18 +479,24 @@ hr:before {
 <h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
 <code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
 <p>Yet another errors package.</p>
-<span>v1.2.0 │ ★ 3</span>
+<span>v1.3.0 │ ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
 <code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
 <p>Print nicely aligned tables in the terminal.</p>
-<span>v1.0.0 │ ★ 3</span>
+<span>v1.1.0 │ ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
 <code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
 <p>I18n library.</p>
+<span>  ★ 2</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
+<code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
+<p>A terminfo library.</p>
 <span>  ★ 2</span>
 </div>
 <div>
@@ -521,13 +533,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
 <code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
 <p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>v1.4.0 │ ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
-<code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
-<p>A terminfo library.</p>
-<span>  ★ 0</span>
+<span>v1.5.0 │ ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/term">zgo.at/term</a></h3>
@@ -539,7 +545,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/runewidth">zgo.at/runewidth</a></h3>
 <code><a href="https://godocs.io/zgo.at/runewidth">godoc</a></code>
 <p>Wcwidth.</p>
-<span>  ★ 0</span>
+<span>v0.1.0 │ ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
@@ -703,7 +709,24 @@ hr:before {
 		var url = goatcounter.url(vars)
 		if (!url)
 			return warn('not counting because path callback returned null')
-		navigator.sendBeacon(url)
+
+		if (!navigator.sendBeacon(url)) {
+			// This mostly fails due to being blocked by CSP; try again with an
+			// image-based fallback.
+			var img = document.createElement('img')
+			img.src = url
+			img.style.position = 'absolute'  // Affect layout less.
+			img.style.bottom = '0px'
+			img.style.width = '1px'
+			img.style.height = '1px'
+			img.loading = 'eager'
+			img.setAttribute('alt', '')
+			img.setAttribute('aria-hidden', 'true')
+
+			var rm = function() { if (img && img.parentNode) img.parentNode.removeChild(img) }
+			img.addEventListener('load', rm, false)
+			document.body.appendChild(img)
+		}
 	}
 
 	// Get a query parameter.
