--- a/index.html
+++ b/index.html
@@ -284,19 +284,25 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4244</span>
+<span>v2.5.0 │ ★ 4824</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.7.0 │ ★ 776</span>
+<span>v2.8.0 │ ★ 819</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/elles">elles</a></h3>
+<code><a href="https://godocs.io/zgo.at/elles">godoc</a></code>
+<p>A nicer /bin/ls.</p>
+<span>v0.3.0 │ ★ 80</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>v1.0.0 │ ★ 26</span>
+<span>v1.0.0 │ ★ 30</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
@@ -317,9 +323,9 @@ hr:before {
 <span>v1.0.0 │ ★ 5</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/border">border</a></h3>
-<code><a href="https://godocs.io/zgo.at/border">godoc</a></code>
-<p>Commandline tool to add a border around PNG images.</p>
+<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
+<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
+<p>Aggregate statistics for git repos.</p>
 <span>  ★ 4</span>
 </div>
 <div>
@@ -335,9 +341,9 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
-<code><a href="https://godocs.io/zgo.at/git-stats">godoc</a></code>
-<p>Aggregate statistics for git repos.</p>
+<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -347,10 +353,10 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
-<p>Format json, nicely.</p>
-<span>  ★ 2</span>
+<h3><a href="https://github.com/arp242/border">border</a></h3>
+<code><a href="https://godocs.io/zgo.at/border">godoc</a></code>
+<p>Commandline tool to add a border around PNG images.</p>
+<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
@@ -371,43 +377,43 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/structalign">structalign</a></h3>
+<code><a href="https://godocs.io/zgo.at/structalign">godoc</a></code>
+<p>Print the memory alignment of structs.</p>
+<span>  ★ 0</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
 <code><a href="https://godocs.io/zgo.at/kommentaar">godoc</a></code>
 <p>Generate documentation for Go APIs.</p>
 <span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/elles">elles</a></h3>
-<code><a href="https://godocs.io/zgo.at/elles">godoc</a></code>
-<p>.</p>
-<span>  ★ </span>
 </div>
 </section>
 <section class="page">
 <h2 id="libraries">Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
 <p>In-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.1.0 │ ★ 62</span>
+<span>v1.2.0 │ ★ 68</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>Go library for writing CLI programs. Includes flag parsing, colours, testing, and various helpful utility functions.</p>
-<span>  ★ 40</span>
+<span>  ★ 43</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
 <code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
 <p>Detect HTTP bots.</p>
-<span>v1.0.0 │ ★ 19</span>
+<span>v1.0.0 │ ★ 21</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
 <code><a href="https://godocs.io/zgo.at/follow">godoc</a></code>
 <p>Follow a file for changes; e.g. &#34;tail -F&#34;.</p>
-<span>  ★ 19</span>
+<span>  ★ 20</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
@@ -419,19 +425,19 @@ hr:before {
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Interact with SQL databases.</p>
-<span>  ★ 11</span>
+<span>  ★ 12</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
 <code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
 <p>Martin&#39;s HTTP package.</p>
-<span>  ★ 10</span>
+<span>  ★ 11</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
 <code><a href="https://godocs.io/zgo.at/zprof">godoc</a></code>
 <p>Display runtime profiling data for Go programs over HTTP.</p>
-<span>  ★ 9</span>
+<span>  ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
@@ -440,16 +446,52 @@ hr:before {
 <span>v1.0.0 │ ★ 9</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
+<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
+<p>Extensions to Go&#39;s stdlib.</p>
+<span>  ★ 8</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
 <code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
 <p>Send emails with a friendly API.</p>
 <span>  ★ 8</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
-<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
-<p>Extensions to Go&#39;s stdlib.</p>
+<h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
+<code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
+<p>Print nicely aligned tables in the terminal.</p>
+<span>v1.1.0 │ ★ 6</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
+<code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
+<p>Go timezone convience library.</p>
 <span>  ★ 5</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
+<code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
+<p>A terminfo library.</p>
+<span>  ★ 5</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
+<code><a href="https://godocs.io/zgo.at/zlog">godoc</a></code>
+<p>Go logging library.</p>
+<span>  ★ 4</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
+<code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
+<p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
+<span>v1.5.0 │ ★ 4</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
+<code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
+<p>Yet another errors package.</p>
+<span>v1.4.0 │ ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
@@ -458,15 +500,9 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
-<code><a href="https://godocs.io/zgo.at/zlog">godoc</a></code>
-<p>Go logging library.</p>
-<span>  ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
-<code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
-<p>Go timezone convience library.</p>
+<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
+<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
+<p>I18n library.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -476,33 +512,15 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
-<code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
-<p>Yet another errors package.</p>
-<span>v1.3.0 │ ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
-<code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
-<p>Print nicely aligned tables in the terminal.</p>
-<span>v1.1.0 │ ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
-<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
-<p>I18n library.</p>
-<span>  ★ 2</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
-<code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
-<p>A terminfo library.</p>
-<span>  ★ 2</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
 <code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
 <p>Format json, nicely.</p>
+<span>  ★ 3</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
+<code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
+<p>Encoding/json with patches.</p>
 <span>  ★ 2</span>
 </div>
 <div>
@@ -512,52 +530,40 @@ hr:before {
 <span>  ★ 2</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
+<code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
+<p></p>
+<span>  ★ 1</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/zstripe">zgo.at/zstripe</a></h3>
 <code><a href="https://godocs.io/zgo.at/zstripe">godoc</a></code>
 <p>Set of utility functions for working with the Stripe API.</p>
 <span>v1.1.0 │ ★ 1</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
-<code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
-<p>Encoding/json with patches.</p>
-<span>  ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
-<code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
-<p></p>
-<span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
-<code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
-<p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>v1.5.0 │ ★ 0</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/term">zgo.at/term</a></h3>
 <code><a href="https://godocs.io/zgo.at/term">godoc</a></code>
-<p> Go terminal and console support.</p>
-<span>  ★ 0</span>
+<p>Go terminal and console support.</p>
+<span>  ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/runewidth">zgo.at/runewidth</a></h3>
 <code><a href="https://godocs.io/zgo.at/runewidth">godoc</a></code>
 <p>Wcwidth.</p>
-<span>v0.1.0 │ ★ 0</span>
+<span>v0.1.0 │ ★ 1</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
+<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
+<p>Go errors with a Guru Meditation Number.</p>
+<span>v1.2.0 │ ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
 <code><a href="https://godocs.io/zgo.at/ps">godoc</a></code>
 <p>List system processes.</p>
 <span>  ★ 0</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
-<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
-<p>Go errors with a Guru Meditation Number.</p>
-<span>v1.1.0 │ ★ 0</span>
 </div>
 </section>
 	<script>// GoatCounter: https://www.goatcounter.com
