--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.5.0 │ ★ 4824</span>
+<span>v2.6.0 │ ★ 4986</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.8.0 │ ★ 819</span>
+<span>v2.8.0 │ ★ 826</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/elles">elles</a></h3>
@@ -302,7 +302,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>v1.0.0 │ ★ 30</span>
+<span>v1.0.0 │ ★ 35</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
+<code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
+<p>&#39;go mod graph&#39; as a nicely indented graph.</p>
+<span>v1.0.0 │ ★ 7</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
@@ -317,10 +323,10 @@ hr:before {
 <span>v1.0.2 │ ★ 6</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
-<code><a href="https://godocs.io/zgo.at/gomodgraph">godoc</a></code>
-<p>&#39;go mod graph&#39; as a nicely indented graph.</p>
-<span>v1.0.0 │ ★ 5</span>
+<h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
+<code><a href="https://godocs.io/zgo.at/sqlbench">godoc</a></code>
+<p>Run benchmarks on an SQL database.</p>
+<span>  ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/git-stats">git-stats</a></h3>
@@ -332,12 +338,6 @@ hr:before {
 <h3><a href="https://github.com/arp242/wtff">wtff</a></h3>
 <code><a href="https://godocs.io/zgo.at/wtff">godoc</a></code>
 <p>Frontend for some ffmpeg operations.</p>
-<span>  ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
-<code><a href="https://godocs.io/zgo.at/sqlbench">godoc</a></code>
-<p>Run benchmarks on an SQL database.</p>
 <span>  ★ 3</span>
 </div>
 <div>
@@ -359,6 +359,12 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/structalign">structalign</a></h3>
+<code><a href="https://godocs.io/zgo.at/structalign">godoc</a></code>
+<p>Print the memory alignment of structs.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
 <code><a href="https://godocs.io/zgo.at/gosodoff">godoc</a></code>
 <p>Generate return statements in Go code.</p>
@@ -377,12 +383,6 @@ hr:before {
 <span>  ★ 0</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/structalign">structalign</a></h3>
-<code><a href="https://godocs.io/zgo.at/structalign">godoc</a></code>
-<p>Print the memory alignment of structs.</p>
-<span>  ★ 0</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
 <code><a href="https://godocs.io/zgo.at/kommentaar">godoc</a></code>
 <p>Generate documentation for Go APIs.</p>
@@ -393,21 +393,21 @@ hr:before {
 <h2 id="libraries">Libraries</h2>
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcache">godoc</a></code>
+<code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
 <p>In-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v1.2.0 │ ★ 68</span>
+<span>v2.2.0 │ ★ 70</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>Go library for writing CLI programs. Includes flag parsing, colours, testing, and various helpful utility functions.</p>
-<span>  ★ 43</span>
+<span>  ★ 45</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
 <code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
 <p>Detect HTTP bots.</p>
-<span>v1.0.0 │ ★ 21</span>
+<span>v1.0.0 │ ★ 24</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
@@ -422,16 +422,16 @@ hr:before {
 <span>v1.2.2 │ ★ 17</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
+<code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
+<p>Martin&#39;s HTTP package.</p>
+<span>  ★ 12</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Interact with SQL databases.</p>
 <span>  ★ 12</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
-<code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
-<p>Martin&#39;s HTTP package.</p>
-<span>  ★ 11</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
@@ -458,12 +458,6 @@ hr:before {
 <span>  ★ 8</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
-<code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
-<p>Print nicely aligned tables in the terminal.</p>
-<span>v1.1.0 │ ★ 6</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
 <code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
 <p>Go timezone convience library.</p>
@@ -476,16 +470,16 @@ hr:before {
 <span>  ★ 5</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
+<code><a href="https://godocs.io/zgo.at/acidtab">godoc</a></code>
+<p>Print nicely aligned tables in the terminal.</p>
+<span>v1.1.0 │ ★ 5</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
 <code><a href="https://godocs.io/zgo.at/zlog">godoc</a></code>
 <p>Go logging library.</p>
 <span>  ★ 4</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
-<code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
-<p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
-<span>v1.5.0 │ ★ 4</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
@@ -504,6 +498,12 @@ hr:before {
 <code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
 <p>I18n library.</p>
 <span>  ★ 3</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
+<code><a href="https://godocs.io/zgo.at/termtext">godoc</a></code>
+<p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
+<span>v1.5.0 │ ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/slog_align">zgo.at/slog_align</a></h3>
@@ -565,16 +565,19 @@ hr:before {
 <p>List system processes.</p>
 <span>  ★ 0</span>
 </div>
+<div>
+<h3><a href="https://github.com/arp242/otp">zgo.at/otp</a></h3>
+<code><a href="https://godocs.io/zgo.at/otp">godoc</a></code>
+<p>HOTP/TOTP one-time passwords.</p>
+<span>  ★ 0</span>
+</div>
 </section>
 	<script>// GoatCounter: https://www.goatcounter.com
 // This file is released under the ISC license: https://opensource.org/licenses/ISC
 ;(function() {
 	'use strict';
 
-	if (window.goatcounter && window.goatcounter.vars)  // Compatibility with very old version; do not use.
-		window.goatcounter = window.goatcounter.vars
-	else
-		window.goatcounter = window.goatcounter || {}
+	window.goatcounter = window.goatcounter || {}
 
 	// Load settings from data-goatcounter-settings.
 	var s = document.querySelector('script[data-goatcounter]')
@@ -589,7 +592,8 @@ hr:before {
 	var enc = encodeURIComponent
 
 	// Get all data we're going to send off to the counter endpoint.
-	var get_data = function(vars) {
+	window.goatcounter.get_data = function(vars) {
+		vars = vars || {}
 		var data = {
 			p: (vars.path     === undefined ? goatcounter.path     : vars.path),
 			r: (vars.referrer === undefined ? goatcounter.referrer : vars.referrer),
@@ -652,9 +656,7 @@ hr:before {
 	// Get the endpoint to send requests to.
 	var get_endpoint = function() {
 		var s = document.querySelector('script[data-goatcounter]')
-		if (s && s.dataset.goatcounter)
-			return s.dataset.goatcounter
-		return (goatcounter.endpoint || window.counter)  // counter is for compat; don't use.
+		return (s && s.dataset.goatcounter) ? s.dataset.goatcounter : goatcounter.endpoint
 	}
 
 	// Get current path.
@@ -679,7 +681,7 @@ hr:before {
 	}
 
 	// Filter some requests that we (probably) don't want to count.
-	goatcounter.filter = function() {
+	window.goatcounter.filter = function() {
 		if ('visibilityState' in document && document.visibilityState === 'prerender')
 			return 'visibilityState'
 		if (!goatcounter.allow_frame && location !== parent.location)
@@ -695,7 +697,7 @@ hr:before {
 
 	// Get URL to send to GoatCounter.
 	window.goatcounter.url = function(vars) {
-		var data = get_data(vars || {})
+		var data = window.goatcounter.get_data(vars || {})
 		if (data.p === null)  // null from user callback.
 			return
 		data.rnd = Math.random().toString(36).substr(2, 5)  // Browsers don't always listen to Cache-Control.
@@ -799,7 +801,7 @@ hr:before {
 
 			var p = document.querySelector(opt.append)
 			if (!p)
-				return warn('visit_count: append not found: ' + opt.append)
+				return warn('visit_count: element to append to not found: ' + opt.append)
 			p.appendChild(d)
 		})
 	}
