--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.6.0 │ ★ 4986</span>
+<span>v2.6.0 │ ★ 4993</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
@@ -302,7 +302,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>v1.0.0 │ ★ 35</span>
+<span>v1.1.0 │ ★ 35</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
@@ -518,6 +518,12 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/otp">zgo.at/otp</a></h3>
+<code><a href="https://godocs.io/zgo.at/otp">godoc</a></code>
+<p>HOTP/TOTP one-time passwords.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
 <code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
 <p>Encoding/json with patches.</p>
@@ -565,14 +571,8 @@ hr:before {
 <p>List system processes.</p>
 <span>  ★ 0</span>
 </div>
-<div>
-<h3><a href="https://github.com/arp242/otp">zgo.at/otp</a></h3>
-<code><a href="https://godocs.io/zgo.at/otp">godoc</a></code>
-<p>HOTP/TOTP one-time passwords.</p>
-<span>  ★ 0</span>
-</div>
 </section>
-	<script>// GoatCounter: https://www.goatcounter.com
+	<script data-goatcounter="https://zgoat.goatcounter.com/count">// GoatCounter: https://www.goatcounter.com
 // This file is released under the ISC license: https://opensource.org/licenses/ISC
 ;(function() {
 	'use strict';
