--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@ hr:before {
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href="https://godocs.io/zgo.at/goatcounter/v2">godoc</a></code>
 <p>Easy web analytics. No tracking of personal data.</p>
-<span>v2.6.0 │ ★ 4993</span>
+<span>v2.6.0 │ ★ 5317</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/uni">uni</a></h3>
 <code><a href="https://godocs.io/zgo.at/uni/v2">godoc</a></code>
 <p>Query the Unicode database from the commandline, with good support for emojis.</p>
-<span>v2.8.0 │ ★ 826</span>
+<span>v2.8.0 │ ★ 839</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/elles">elles</a></h3>
@@ -303,7 +303,7 @@ hr:before {
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href="https://godocs.io/zgo.at/singlepage">godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
-<span>v1.1.0 │ ★ 35</span>
+<span>v1.1.0 │ ★ 41</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
@@ -342,12 +342,6 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
-<p>Format json, nicely.</p>
-<span>  ★ 3</span>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/cantuse">cantuse</a></h3>
 <code><a href="https://godocs.io/zgo.at/cantuse">godoc</a></code>
 <p>List browsers in which a feature *won&#39;t* work.</p>
@@ -366,22 +360,28 @@ hr:before {
 <span>  ★ 2</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/jfmt">jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt/cmd/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
+<span>  ★ 2</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
 <code><a href="https://godocs.io/zgo.at/gosodoff">godoc</a></code>
 <p>Generate return statements in Go code.</p>
 <span>  ★ 2</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/zcert">zcert</a></h3>
+<code><a href="https://godocs.io/zgo.at/zcert">godoc</a></code>
+<p></p>
+<span>  ★ 1</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/har">har</a></h3>
 <code><a href="https://godocs.io/zgo.at/har">godoc</a></code>
 <p>Read HAR (&#34;HTTP Archive format&#34;) files.</p>
 <span>  ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zcert">zcert</a></h3>
-<code><a href="https://godocs.io/zgo.at/zcert">godoc</a></code>
-<p></p>
-<span>  ★ 0</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/kommentaar">kommentaar</a></h3>
@@ -395,20 +395,20 @@ hr:before {
 <div>
 <h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
 <code><a href="https://godocs.io/zgo.at/zcache/v2">godoc</a></code>
-<p>In-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
-<span>v2.2.0 │ ★ 70</span>
+<p>In-memory key:value store/cache library for Go, suitable for single-machine applications.</p>
+<span>v2.4.1 │ ★ 76</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
 <code><a href="https://godocs.io/zgo.at/zli">godoc</a></code>
 <p>Go library for writing CLI programs. Includes flag parsing, colours, testing, and various helpful utility functions.</p>
-<span>  ★ 45</span>
+<span>  ★ 46</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
 <code><a href="https://godocs.io/zgo.at/isbot">godoc</a></code>
 <p>Detect HTTP bots.</p>
-<span>v1.0.0 │ ★ 24</span>
+<span>v1.0.0 │ ★ 28</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
@@ -426,13 +426,19 @@ hr:before {
 <h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
 <code><a href="https://godocs.io/zgo.at/zhttp">godoc</a></code>
 <p>Martin&#39;s HTTP package.</p>
-<span>  ★ 12</span>
+<span>  ★ 14</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
 <code><a href="https://godocs.io/zgo.at/zdb">godoc</a></code>
 <p>Interact with SQL databases.</p>
-<span>  ★ 12</span>
+<span>  ★ 14</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
+<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
+<p>Extensions to Go&#39;s stdlib.</p>
+<span>  ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
@@ -444,30 +450,30 @@ hr:before {
 <h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
 <code><a href="https://godocs.io/zgo.at/gadget">godoc</a></code>
 <p>Get the browser and OS from the User-Agent header.</p>
-<span>v1.0.0 │ ★ 9</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
-<code><a href="https://godocs.io/zgo.at/zstd">godoc</a></code>
-<p>Extensions to Go&#39;s stdlib.</p>
-<span>  ★ 8</span>
+<span>v1.0.0 │ ★ 10</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
 <code><a href="https://godocs.io/zgo.at/blackmail">godoc</a></code>
 <p>Send emails with a friendly API.</p>
-<span>  ★ 8</span>
+<span>  ★ 9</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
 <code><a href="https://godocs.io/zgo.at/tz">godoc</a></code>
 <p>Go timezone convience library.</p>
-<span>  ★ 5</span>
+<span>  ★ 6</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
 <code><a href="https://godocs.io/zgo.at/termfo">godoc</a></code>
 <p>A terminfo library.</p>
+<span>  ★ 6</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
+<code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
+<p>Static validation for Go that returns parsed values.</p>
 <span>  ★ 5</span>
 </div>
 <div>
@@ -483,22 +489,22 @@ hr:before {
 <span>  ★ 4</span>
 </div>
 <div>
+<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
+<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
+<p>I18n library.</p>
+<span>  ★ 4</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/otp">zgo.at/otp</a></h3>
+<code><a href="https://godocs.io/zgo.at/otp">godoc</a></code>
+<p>HOTP/TOTP one-time passwords.</p>
+<span>  ★ 4</span>
+</div>
+<div>
 <h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
 <code><a href="https://godocs.io/zgo.at/errors">godoc</a></code>
 <p>Yet another errors package.</p>
 <span>v1.4.0 │ ★ 4</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
-<code><a href="https://godocs.io/zgo.at/zvalidate">godoc</a></code>
-<p>Static validation for Go that returns parsed values.</p>
-<span>  ★ 3</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
-<code><a href="https://godocs.io/zgo.at/z18n">godoc</a></code>
-<p>I18n library.</p>
-<span>  ★ 3</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
@@ -513,21 +519,27 @@ hr:before {
 <span>  ★ 3</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
-<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
-<p>Format json, nicely.</p>
-<span>  ★ 3</span>
+<h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
+<code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
+<p></p>
+<span>  ★ 2</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/otp">zgo.at/otp</a></h3>
-<code><a href="https://godocs.io/zgo.at/otp">godoc</a></code>
-<p>HOTP/TOTP one-time passwords.</p>
-<span>  ★ 2</span>
+<h3><a href="https://github.com/arp242/zstripe">zgo.at/zstripe</a></h3>
+<code><a href="https://godocs.io/zgo.at/zstripe">godoc</a></code>
+<p>Set of utility functions for working with the Stripe API.</p>
+<span>v1.1.0 │ ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
 <code><a href="https://godocs.io/zgo.at/json">godoc</a></code>
 <p>Encoding/json with patches.</p>
+<span>  ★ 2</span>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/jfmt">zgo.at/jfmt</a></h3>
+<code><a href="https://godocs.io/zgo.at/jfmt">godoc</a></code>
+<p>Format json, nicely.</p>
 <span>  ★ 2</span>
 </div>
 <div>
@@ -537,16 +549,10 @@ hr:before {
 <span>  ★ 2</span>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
-<code><a href="https://godocs.io/zgo.at/ztpl">godoc</a></code>
-<p></p>
-<span>  ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/zstripe">zgo.at/zstripe</a></h3>
-<code><a href="https://godocs.io/zgo.at/zstripe">godoc</a></code>
-<p>Set of utility functions for working with the Stripe API.</p>
-<span>v1.1.0 │ ★ 1</span>
+<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
+<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
+<p>Go errors with a Guru Meditation Number.</p>
+<span>v1.2.0 │ ★ 2</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/term">zgo.at/term</a></h3>
@@ -559,12 +565,6 @@ hr:before {
 <code><a href="https://godocs.io/zgo.at/runewidth">godoc</a></code>
 <p>Wcwidth.</p>
 <span>v0.1.0 │ ★ 1</span>
-</div>
-<div>
-<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
-<code><a href="https://godocs.io/zgo.at/guru">godoc</a></code>
-<p>Go errors with a Guru Meditation Number.</p>
-<span>v1.2.0 │ ★ 1</span>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
@@ -600,7 +600,7 @@ hr:before {
 			r: (vars.referrer === undefined ? goatcounter.referrer : vars.referrer),
 			t: (vars.title    === undefined ? goatcounter.title    : vars.title),
 			e: !!(vars.event || goatcounter.event),
-			s: [window.screen.width, window.screen.height, (window.devicePixelRatio || 1)],
+			s: window.screen.width,
 			b: is_bot(),
 			q: location.search,
 		}
