--- a/zdb-drivers/go-sqlite3.html
+++ b/zdb-drivers/go-sqlite3.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="go-import" content="zgo.at/zdb-drivers/go-sqlite3 git https://github.com/arp242/zdb-drivers.git">
-<meta name="go-source" content="zgo.at/zdb-drivers/go-sqlite3 https://github.com/arp242/zdb-drivers https://github.com/arp242/zdb-drivers/tree/master/{/dir}/ https://github.com/arp242/zdb-drivers/tree/master/{/dir}/{file}#L{line}">
+<meta name="go-import" content="zgo.at/zdb-drivers/go-sqlite3 git https://github.com/arp242/zdb-drivers.git go-sqlite3">
+<meta name="go-source" content="zgo.at/zdb-drivers/go-sqlite3 https://github.com/arp242/zdb-drivers https://github.com/arp242/zdb-drivers/tree/main/{/dir}/ https://github.com/arp242/zdb-drivers/tree/main/{/dir}/{file}#L{line}">
 <meta http-equiv="refresh" content="0; url=https://github.com/arp242/zdb-drivers">
 </head><body><p>
 This is the <code>zgo.at/zdb-drivers/go-sqlite3</code> Go package. Its homepage is at <a href="https://github.com/arp242/zdb-drivers">https://github.com/arp242/zdb-drivers</a>.
